2006-07-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lread.c (read_filtered_event): Remove `register' qualifier because it
	causes compilation problem with gcc-4.0.2-20051125 on amd64.
	(readevalloop): Remove unused var `bpos'.
	Yet another int/Lisp_Object mixup (YAILOM).

2006-07-07  Eli Zaretskii  <eliz@gnu.org>

	* keyboard.c (Fexecute_extended_command): Mention the argument
	PREFIXARG in the doc string.

2006-07-07  Kim F. Storm  <storm@cua.dk>

	* fringe.c (Fdefine_fringe_bitmap): Doc fix.

2006-07-05  Chong Yidong  <cyd@stupidchicken.com>

	* insdel.c (prepare_to_modify_buffer): For an indirect buffer, do
	clash detection using the base buffer.

	* puresize.h (BASE_PURESIZE): Increment to 1210500.

2006-07-04  Kim F. Storm  <storm@cua.dk>

	* xterm.c (x_delete_display): Don't free or derefence NULL pointers.

2006-07-04  Kenichi Handa  <handa@m17n.org>

	* fontset.c (Fset_overriding_fontspec_internal): Check if we need
	to update Voverriding_fontspec_alist.

2006-07-03  Richard Stallman  <rms@gnu.org>

	* xfns.c (Fx_create_frame): Move unwind_create_frame setup down.

	* xfaces.c (Fface_attribute_relative_p): Doc fix.

	* textprop.c (Fget_char_property_and_overlay): Doc fix.

	* eval.c (Fdefvaralias): Doc fix.

2006-07-03  Kim F. Storm  <storm@cua.dk>

	* dispnew.c (sit_for): Fix preempt condition.

2006-07-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lread.c (read_filtered_event): Treat select-window just like
	switch-frame.

2006-07-02  Kim F. Storm  <storm@cua.dk>

	* xdisp.c (display_tool_bar_line): Skip glyphs which are too big
	to ever fit the tool-bar,
	(MAX_FRAME_TOOL_BAR_HEIGHT): New macro.
	(tool_bar_lines_needed): Use unused mode-line row as temp_row.
	(redisplay_tool_bar): Only clear desired matrix if we actually
	change the tool-bar window height.  Only try to make the tool-bar
	window bigger if there is actually room for it.

2006-06-30  Ralf Angeli  <angeli@caeruleus.net>
